# AnomalyLauncher

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  launcherconfig.toml
src/: app_config.rs  game.rs  main.rs  styles.rs
