[package]
name = "AnomalyLauncher"
version = "1.0.0-rc1"
edition = "2021"

[dependencies]
eframe = { version = "0.32.0", features = [
    "glow",
    "default_fonts",
], default-features = false }
rfd = { version = "0.15.4", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
image = "0.25.6"

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false

[build-dependencies]
winresource = "0.1.23"
