[package]
name = "AnomalyLauncher"
version = "1.0.0-dev"
edition = "2024"

[dependencies]
eframe = { version = "0.32.3", features = ["glow"], default-features = false }
rfd = { version = "0.15.4", default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
toml = "0.9.7"
image = "0.25.8"
thiserror = "2.0.16"
anyhow = "1.0.100"

[profile.dev]
debug = "full"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = false

[build-dependencies]
winresource = "0.1.23"
